<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.wyu.zxing.view.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:inner_height="250dp"
        app:inner_margintop="140dp"
        app:inner_width="250dp" />

    <ImageView
        android:id="@+id/iv_finder"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:src="@mipmap/capture_frame" />

    <RelativeLayout
        android:id="@+id/title_lay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/scan_back"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/new_dev_scan_back_selector"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/scode_title"
            android:textColor="@color/color_white"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_scan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/title_lay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/put_code_in_the_box"
        android:textColor="@android:color/white"
        android:textSize="15sp" />


    <LinearLayout
        android:id="@+id/bottom_mask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/iv_flight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/add_scan_btn_opne"
            android:gravity="center_horizontal"
            android:text="@string/qr_light"
            android:textColor="@color/color_white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/qrcode_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:drawableTop="@mipmap/add_scan_btn_pic"
            android:gravity="center_horizontal"
            android:text="@string/qr_pic"
            android:textColor="@color/color_white"
            android:textSize="12sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bottom_mask">

        <TextView
            android:id="@+id/tv_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/tool_scan_img_qr"
            android:gravity="center"
            android:text="@string/scan_text"
            android:textColor="@color/color_white"
            android:textSize="13sp" />
    </RelativeLayout>


</RelativeLayout>